# bioagent

./: .gitignore  Install-BioAgent.cmd  README.md  Start-BioAgent.cmd  pyproject.toml
.tmp-full-manual-login-019f7d97/test_authentication_pause_can_0/: agent.db
.tmp-full-manual-login-019f7d97/test_canvas_must_be_verified_b0/: canvas-gate.sqlite3
.tmp-full-manual-login-019f7d97/test_closing_login_window_rele0/: login-close.sqlite3
.tmp-full-manual-login-019f7d97/test_confirmed_dry_run_allows_0/: ui.sqlite3
.tmp-full-manual-login-019f7d97/test_confirmed_dry_run_cannot_0/: ui.sqlite3
.tmp-full-manual-login-019f7d97/test_custom_asset_limit_is_enf0/: ui.sqlite3
.tmp-full-manual-login-019f7d97/test_dead_job_is_reaped_instea0/: ui.sqlite3
.tmp-full-manual-login-019f7d97/test_dry_run_is_persisted_and_0/: agent.db
app/: __init__.py  cli.py  config.py  main.py  runtime_version.py
docs/: Element_Capability_Matrix.md  Environment_Setup.md  FULL_FLOW_AUDIT_REPORT.md  Graphical_UI_Guide.md  How_It_Works.md  Prompt_Design.md  Quick_Start.md  Real_BioRender_Acceptance.md  User_Manual.md  Windows_Installation_Guide.md
examples/: pd1_request.txt
scripts/: start_web_ui.ps1  validate_guided_ui.py
tests/: test_api.py  test_biorender_browser_integration.py  test_biorender_editor_ready.py  test_biorender_phase0.py  test_element_capabilities.py  test_planning.py  test_scientific_guard.py  test_ui_api.py  test_ui_page.py  test_ui_wizard_browser.py  test_windows_installer.py  test_workflow.py  windows_installer_harness.ps1
(+801 files in other folders)
